--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,32 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme">
+
+        </activity>
+        <activity android:name="com.example.process.ProcessOneActivity"
+            android:theme="@style/FullscreenTheme"
+            android:process=":processOne"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.example.process.ProcessTwoActivity"
+            android:theme="@style/FullscreenTheme"
+            android:process=":processTwo"
+            ></activity>
+        <service android:name="com.example.process.AidlService"
+            android:process=":processOne"
+            android:enabled="true"
+            android:exported="true"
+            >
+            <intent-filter>
+                <action android:name="com.example.process.action"/>
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
